	* src/files.c (get_full_path): Plug a sneaky memory leak.  This fixes
	Savannah bug #47003 reported and solved by Mike Frysinger.
	* src/rcfile.c (parse_binding): Allow only control sequences in the
	proper range to be rebound.  This fixes Savannah bug #47025.
	* THANKS: Add a Spanish, a Catalan, and a Croat translator.
	* AUTHORS, THANKS: Remove SVN Id tags and a duplication.

2016-02-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (stat_with_alloc, open_buffer, write_file): Check the
	result of a stat() to avoid referencing unitialized data.  Original
	patch was by Kamil Dudka.
	* doc/man/{nano.1,rnano.1,nanorc.5}: Adjust version for release.

2016-02-07  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (update_poshistory): Don't put files in the history list
	when they have the default cursor position (line 1, column 1).
	* src/files.c (write_file): Avoid a pointless lstat() when not writing
	to a temp file, and in the bargain elide two variables.
	* src/files.c (write_file): Elide an unneeded 'if'.
	* doc/syntax/c.nanorc: Use a character class instead of a literal tab
	and space.  The change was inspired by David Niklas.
	* src/prompt.c (do_yesno_prompt): Normalize the indentation.
	* src/prompt.c (do_yesno_prompt): Rename a variable.

2016-02-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_file): Remove the --nofollow option that hasn't
	been working for a dozen years.
	* src/winio.c (statusbar): Update the screen immediately whenever a
	message has been posted on the status bar.
	* src/winio.c (statusbar), src/nano.c (do_input): Turn the cursor off
	when writing in the status bar, and on when waiting for	input.
	* src/prompt.c (update_the_statusbar): Chop two parameters that are
	always the same, and that are global variables anyway.
	* src/prompt.c (update_bar_if_needed): Rename this for more contrast.
	* src/prompt.c (do_statusbar_backspace): Avoid updating the bar twice.