@@ -311,6 +311,9 @@ int get_kbinput(WINDOW *win)
 {
     int kbinput;
 
+    /* Turn the cursor on when waiting for input. */
+    curs_set(1);
+
     /* Read in a character and interpret it.  Continue doing this until
      * we get a recognized value or sequence. */
     while ((kbinput = parse_kbinput(win)) == ERR)
